header height fixed, section title overflow hidden removed

--- a/src/assets/scss/base/variables/_color.scss
+++ b/src/assets/scss/base/variables/_color.scss
@@ -6,7 +6,6 @@ $white          :   #FFFFFF;
 $black          :   #444444;
 
 $quarto-yellow  :   #F0C10F;
-$tundora        :   #4A4A4A;
 $quarto-brick   :   #B74C1D;
 
 
@@ -14,7 +13,7 @@ $light          :   #FFF;
 $extraLight     :   #F2F2F2;
 $silver         :   #BDBDBD;
 
-$primary        :   $tundora;
+$primary        :   $black;
 $secondary      :   $quarto-yellow;
 $success        :   #0DA7A9;
 $info           :   $quarto-brick;
