--- a/src/assets/scss/base/variables/_header.scss
+++ b/src/assets/scss/base/variables/_header.scss
@@ -1,1 +1,3 @@
 $header-user-pic-width: 1.90625rem;
+
+$navbar-padding-y: calc( ((60px - (35.53px + (0.3359375rem*2)))/2) - 0.48px)  ;
