--- a/src/assets/scss/modules/_header.scss
+++ b/src/assets/scss/modules/_header.scss
@@ -19,6 +19,11 @@
     right: 0px;
     border-bottom: $border-width solid $extraLight;
     z-index: z('header');
+    .navbar-brand{
+        img{
+            width: 130px;
+        }
+    }
     .navbar-nav{
         .nav-link{
             &:hover{
